fix email templates, create dependencies script

--- a/backend/email_templates/verifycode.html.j2
+++ b/backend/email_templates/verifycode.html.j2
@@ -13,7 +13,7 @@
 	<table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
 		<tr>
 			<td
-				style="padding: 50px; background: url(https://cdn.discordapp.com/attachments/903438724665315370/1137879029857407027/noterbg.png) #B5CFE3; background-size: 50px 50px;">
+				style="padding: 50px; background: url(https://raw.githubusercontent.com/pocolifo/noter-assets/main/noterbg.png) #e2e2e2; background-size: 50px 50px;">
 				<div style="
 				border: #000000 2px solid;
 				border-radius: 15px;
