--- a/backend/email_templates/resetpassword.html.j2
+++ b/backend/email_templates/resetpassword.html.j2
@@ -25,9 +25,9 @@
 				font-family: 'Playfair Display', serif;
 				">
 					<h1 style="font-size: 60px; text-align: center;">Noter</h1>
-					<p style="font-size: 20px;">Please verify your email by clicking the link below.</p>
+					<p style="font-size: 20px;">To reset your Noter account password, click the link below.</p>
 					<a style="font-size: 20px; font-family: Arial, Helvetica, sans-serif;" href="{{ link }}">{{ link }}</a>
-					<p style="font-size: 20px;">If you did not just create a Noter account, please ignore this email.</p>
+					<p style="font-size: 20px;">If you did not request a password reset, please ignore this email.</p>
 					<p style="font-size: 20px;">Thank you,</p>
 					<p style="font-size: 20px; margin-left: 40px;"><a href="https://getnoter.com">the Noter Team</a></p>
 				</div>
